[gd_scene load_steps=21 format=3 uid="uid://c08ttg78rqsvj"]

[ext_resource type="Script" uid="uid://bhrw00eoqlu3q" path="res://UI/UI scripts/mainMenu_2.gd" id="1_tbxbm"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur_MainFont/Tektur-VariableFont_wdth,wght.ttf" id="2_20xwr"]
[ext_resource type="Texture2D" uid="uid://mtpli3e0i76s" path="res://Assets/2D Space Parallax Backgrounds/layers/complete.png" id="2_otx5p"]
[ext_resource type="Texture2D" uid="uid://b5orve30ljwgi" path="res://Assets/1. Free Hologram Interface Wenrexa/Button 1/Button Normal.png" id="3_80tsv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otx5p"]

[sub_resource type="Animation" id="Animation_2tw83"]
resource_name = "FlashStart"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a5bem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlst4"]
_data = {
&"FlashStart": SubResource("Animation_2tw83"),
&"RESET": SubResource("Animation_a5bem")
}

[sub_resource type="Animation" id="Animation_tbxbm"]
resource_name = "CountdownPulse"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownWrapper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_20xwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownWrapper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80tsv"]
_data = {
&"CountdownPulse": SubResource("Animation_tbxbm"),
&"RESET": SubResource("Animation_20xwr")
}

[sub_resource type="Animation" id="Animation_otx5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UIFadeGroup/ReadyWrapperP1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_80tsv"]
resource_name = "ZoomIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UIFadeGroup/ReadyWrapperP1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_njjfu"]
_data = {
&"RESET": SubResource("Animation_otx5p"),
&"ZoomIn": SubResource("Animation_80tsv")
}

[sub_resource type="Animation" id="Animation_tudwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_njjfu"]
resource_name = "ZoomIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2tw83"]
_data = {
&"RESET": SubResource("Animation_tudwm"),
&"ZoomIn": SubResource("Animation_njjfu")
}

[sub_resource type="Animation" id="Animation_qlst4"]
resource_name = "FadeUIOut"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UIFadeGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_emgon"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UIFadeGroup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tpnuv"]
_data = {
&"FadeUIOut": SubResource("Animation_qlst4"),
&"RESET": SubResource("Animation_emgon")
}

[node name="MainMenu_2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbxbm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 638.0
offset_bottom = 360.0
texture = ExtResource("2_otx5p")
expand_mode = 1

[node name="UIFadeGroup" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIFadeGroup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 251.0
offset_top = 135.0
offset_right = 333.0
offset_bottom = 291.0
alignment = 1

[node name="TipsButton" type="Button" parent="UIFadeGroup/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ControlButton")
theme_override_fonts/font = ExtResource("2_20xwr")
text = "Game Tips"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="ControlButton" type="Button" parent="UIFadeGroup/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TipsButton")
focus_neighbor_bottom = NodePath("../BackButton")
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_otx5p")
text = "Control
"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="BackButton" type="Button" parent="UIFadeGroup/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ControlButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_20xwr")
action_mode = 0
text = "Back"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="QuitButton" type="Button" parent="UIFadeGroup/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackButton")
theme_override_fonts/font = ExtResource("2_20xwr")
text = "Quit Game
"
icon = ExtResource("3_80tsv")
flat = true
icon_alignment = 1

[node name="CountdownWrapper" type="Node2D" parent="UIFadeGroup/VBoxContainer"]
position = Vector2(-20, -8)

[node name="StartFlasher" type="AnimationPlayer" parent="UIFadeGroup/VBoxContainer/CountdownWrapper"]
libraries = {
&"": SubResource("AnimationLibrary_qlst4")
}

[node name="CountdownAnimator" type="AnimationPlayer" parent="UIFadeGroup/VBoxContainer/CountdownWrapper"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_80tsv")
}

[node name="CountdownLabel" type="Label" parent="UIFadeGroup/VBoxContainer/CountdownWrapper"]
offset_left = 25.0
offset_top = -31.0
offset_right = 596.0
offset_bottom = 99.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Press Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyWrapperP1" type="Node2D" parent="UIFadeGroup"]
scale = Vector2(0.9, 0.9)

[node name="ReadyLabelP1" type="Label" parent="UIFadeGroup/ReadyWrapperP1"]
offset_left = 79.0
offset_top = 315.0
offset_right = 935.0
offset_bottom = 445.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Player One Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyAnimatorP1" type="AnimationPlayer" parent="UIFadeGroup/ReadyWrapperP1"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_njjfu")
}

[node name="ReadyWrapperP2" type="Node2D" parent="UIFadeGroup"]
position = Vector2(9, 1)
scale = Vector2(0.9, 0.9)

[node name="ReadyLabelP2" type="Label" parent="UIFadeGroup/ReadyWrapperP2"]
offset_left = 426.0
offset_top = 317.0
offset_right = 1293.0
offset_bottom = 447.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("2_20xwr")
theme_override_font_sizes/font_size = 100
text = "Player Two Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyAnimatorP2" type="AnimationPlayer" parent="UIFadeGroup/ReadyWrapperP2"]
root_node = NodePath("../ReadyLabelP2")
libraries = {
&"": SubResource("AnimationLibrary_2tw83")
}

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tpnuv")
}

[connection signal="pressed" from="UIFadeGroup/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UIFadeGroup/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
